# FlowBuilder

./: .gitignore  VERCEL.md  test_ai_flow.ipynb
backend/: GEMINI.md  README.md  ai_flow_test.py  debug_api.py  main.py  pyproject.toml  requirements.txt  test_ai_flow.ipynb
backend/api/: index.py
backend/application/evaluation/: classify_interaction.py  consolidate_results.py  extract_metadata.py  manage_rules.py  score_dimension.py  service.py
backend/application/prompt/: service.py
backend/application/services/: backup_service.py  flow_execution.py  flow_lifecycle.py  official_data_service.py  rule_generation_service.py  sql_execution_service.py
backend/data/backups/: backup_20260609_234617.json  backup_20260609_234822.json  backup_20260609_235334.json  backup_20260609_235707.json  backup_20260610_000109.json  backup_20260611_192154.json  backup_20260616_102919.json  backup_20260616_105434.json  backup_20260616_111352.json  backup_20260622_102857.json
backend/data/prompts/: System Architect.md
backend/data/test_samples/: 6391829.txt
backend/domain/models/: atendimento.py  flow.py  rule.py  value_objects.py
backend/domain/ports/: flow_repository.py  llm_provider.py  model_provider.py  official_db_port.py  prompt_repository.py  repository.py  rule_repository.py  sql_execution_port.py
backend/domain/services/: flow_router_evaluator.py  graph_compiler.py  model_service.py  (+3 more)
backend/models/: official_schemas.py  schemas.py
backend/scripts/: reset_db.py  sync_prompts.py
backend/services/: evaluation_flow.py  file_service.py  ia_client.py
(+255 files in other folders)
