[project]
name = "aitest"
version = "0.1.0"
description = "NPS Inteligente AI Lab - DDD & Hexagonal Architecture"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.35.0",
    "pandas>=2.2.0",
    "openai>=1.30.0",
    "google-generativeai>=0.5.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.1",
    "pypdf>=4.2.0",
    "graphviz>=0.21",
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
    "google-genai>=2.7.0",
    "langgraph>=1.2.2",
    "langchain>=1.3.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
managed = true
package = false

[tool.pytest.ini_options]
pythonpath = [
  "."
]
